# dia

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
completions/: _dia
src/: autocomplete.rs  completion.rs  config.rs  core.rs  db.rs  entity.rs  main.rs  review.rs  show.rs  stats.rs
