[package]
name = "dia"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "A smart work diary with semantic tracking and SQLite storage"
license = "MIT"
repository = ""

[dependencies]
rusqlite = { version = "0.33.0", features = ["bundled"] }
open = "5.0.0"
clap = { version = "4.4.18", features = ["derive"] }
chrono = { version = "0.4.35", features = ["serde"] }
serde = { version = "1.0.197", features = ["derive"] }
rustyline = "12.0.0"
rustyline-derive = "0.1.0"
dirs = "6.0.0"
thiserror = "1.0.57"
regex = "1.10.3"
comfy-table = "7.1.0"
anyhow = "1.0.81"
toml = "0.8.12"
